statefullset/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
